--- a/forms/new_remote_window.ui
+++ b/forms/new_remote_window.ui
@@ -20,24 +20,68 @@
       <string/>
      </property>
      <property name="placeholderText">
-      <string>New remote name</string>
+      <string>Enter name for new remote</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>5</number>
      </property>
-     <widget class="QWidget" name="tab_google">
+     <widget class="QWidget" name="tab_google_drive">
       <attribute name="title">
        <string>Google Drive</string>
       </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_9">
+       <item>
+        <widget class="QLabel" name="label_3">
+         <property name="text">
+          <string>The browser will open</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Orientation::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </widget>
-     <widget class="QWidget" name="tab_yandex">
+     <widget class="QWidget" name="tab_yandex_disk">
       <attribute name="title">
-       <string>Yandex Drive</string>
+       <string>Yandex Disk</string>
       </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout_8">
+       <item>
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>The browser will open</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="verticalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Orientation::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </widget>
      <widget class="QWidget" name="tab_ftp">
       <attribute name="title">
@@ -56,7 +100,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit_host"/>
+            <widget class="QLineEdit" name="lineEdit_ftp_host"/>
            </item>
           </layout>
          </item>
@@ -70,7 +114,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit_port"/>
+            <widget class="QLineEdit" name="lineEdit_ftp_port"/>
            </item>
           </layout>
          </item>
@@ -91,7 +135,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit_login"/>
+            <widget class="QLineEdit" name="lineEdit_ftp_login"/>
            </item>
           </layout>
          </item>
@@ -105,7 +149,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit_password"/>
+            <widget class="QLineEdit" name="lineEdit_ftp_password"/>
            </item>
           </layout>
          </item>
@@ -118,7 +162,7 @@
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_7">
           <item>
-           <widget class="QCheckBox" name="checkBox">
+           <widget class="QCheckBox" name="checkBox_ftp_tls">
             <property name="text">
              <string>TLS</string>
             </property>
@@ -138,16 +182,22 @@
            </spacer>
           </item>
           <item>
-           <widget class="QRadioButton" name="radioButton_2">
+           <widget class="QRadioButton" name="radioButton_ftp_false">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
-             <string>Explict</string>
+             <string>Implict</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="radioButton">
+           <widget class="QRadioButton" name="radioButton_ftp_true">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
-             <string>Implict</string>
+             <string>Explict</string>
             </property>
            </widget>
           </item>
@@ -207,6 +257,11 @@
         </spacer>
        </item>
       </layout>
+     </widget>
+     <widget class="QWidget" name="tab_local">
+      <attribute name="title">
+       <string>Local</string>
+      </attribute>
      </widget>
     </widget>
    </item>
