--- a/forms/main_window.ui
+++ b/forms/main_window.ui
@@ -13,6 +13,11 @@
   <property name="windowTitle">
    <string>Cloud Explorer</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">#path_list_frame QPushButton {
+	border: 0px solid;
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
@@ -26,6 +31,12 @@
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_2">
+        <property name="maximumSize">
+         <size>
+          <width>40</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="text">
          <string>ᐸ</string>
         </property>
@@ -33,6 +44,12 @@
       </item>
       <item>
        <widget class="QPushButton" name="pushButton_3">
+        <property name="maximumSize">
+         <size>
+          <width>40</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="text">
          <string>ᐳ</string>
         </property>
@@ -40,26 +57,46 @@
       </item>
       <item>
        <widget class="QPushButton" name="button_exit_dir">
+        <property name="maximumSize">
+         <size>
+          <width>40</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="text">
          <string>ᐱ</string>
         </property>
        </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="path_list"/>
-      </item>
-      <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Orientation::Horizontal</enum>
+       <widget class="QFrame" name="path_list_frame">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
+        <property name="frameShape">
+         <enum>QFrame::Shape::StyledPanel</enum>
         </property>
-       </spacer>
+        <property name="frameShadow">
+         <enum>QFrame::Shadow::Raised</enum>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_2">
+         <property name="spacing">
+          <number>0</number>
+         </property>
+         <property name="topMargin">
+          <number>0</number>
+         </property>
+         <property name="bottomMargin">
+          <number>0</number>
+         </property>
+         <item>
+          <layout class="QHBoxLayout" name="path_list"/>
+         </item>
+        </layout>
+       </widget>
       </item>
      </layout>
     </item>
