--- a/forms/main_window.ui
+++ b/forms/main_window.ui
@@ -14,8 +14,9 @@
    <string>Cloud Explorer</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">#path_list_frame1 QPushButton {
+   <string notr="true">#path_list_frame QPushButton {
 	border: 0px;
+	margin: 6px;
 }</string>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -107,7 +108,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QToolButton" name="openMenuButton">
+       <widget class="QPushButton" name="openMenuButton">
         <property name="minimumSize">
          <size>
           <width>34</width>
@@ -126,7 +127,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QFrame" name="path_list_frame">
+       <widget class="QWidget" name="path_list_widget" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -144,12 +145,6 @@
           <width>16777215</width>
           <height>34</height>
          </size>
-        </property>
-        <property name="frameShape">
-         <enum>QFrame::Shape::StyledPanel</enum>
-        </property>
-        <property name="frameShadow">
-         <enum>QFrame::Shadow::Raised</enum>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <property name="spacing">
@@ -254,6 +249,74 @@
    <addaction name="menuOther"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QDockWidget" name="dockWidget">
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_5">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="spacing">
+      <number>0</number>
+     </property>
+     <property name="leftMargin">
+      <number>0</number>
+     </property>
+     <property name="topMargin">
+      <number>0</number>
+     </property>
+     <property name="rightMargin">
+      <number>0</number>
+     </property>
+     <property name="bottomMargin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QTreeWidget" name="tasks">
+       <column>
+        <property name="text">
+         <string>Operation</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Source</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Destination</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Status</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Size</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Progress</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Speed</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Estimated</string>
+        </property>
+       </column>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <action name="action_new_remote">
    <property name="text">
     <string>New remote</string>
