--- a/forms/main_window.ui
+++ b/forms/main_window.ui
@@ -133,11 +133,8 @@
           <height>34</height>
          </size>
         </property>
-        <property name="text">
-         <string/>
-        </property>
         <property name="icon">
-         <iconset theme="user-bookmarks"/>
+         <iconset theme="document-open"/>
         </property>
        </widget>
       </item>
@@ -247,7 +244,7 @@
      <x>0</x>
      <y>0</y>
      <width>1033</width>
-     <height>33</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuClient">
