--- a/forms/main_window.ui
+++ b/forms/main_window.ui
@@ -114,7 +114,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="openMenuButton">
+       <widget class="QPushButton" name="button_update">
         <property name="minimumSize">
          <size>
           <width>34</width>
@@ -128,13 +128,7 @@
          </size>
         </property>
         <property name="icon">
-         <iconset theme="document-open"/>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
+         <iconset theme="view-refresh"/>
         </property>
         <property name="flat">
          <bool>true</bool>
@@ -301,7 +295,14 @@
     </property>
     <addaction name="actionAbout"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="action_list_remotes"/>
+   </widget>
    <addaction name="menuClient"/>
+   <addaction name="menuView"/>
    <addaction name="menuOther"/>
   </widget>
   <widget class="QStatusBar" name="statusbar">
@@ -402,6 +403,17 @@
    </property>
    <property name="text">
     <string>About</string>
+   </property>
+  </action>
+  <action name="action_list_remotes">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>List remotes</string>
    </property>
   </action>
  </widget>
