--- a/forms/new_remote_window.ui
+++ b/forms/new_remote_window.ui
@@ -16,6 +16,9 @@
   <property name="windowIcon">
    <iconset theme="weather-overcast"/>
   </property>
+  <property name="modal">
+   <bool>true</bool>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLineEdit" name="lineEdit_name">
@@ -95,7 +98,11 @@
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit_ftp_password"/>
+            <widget class="QLineEdit" name="lineEdit_ftp_password">
+             <property name="echoMode">
+              <enum>QLineEdit::EchoMode::Password</enum>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -231,7 +238,11 @@
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit_sftp_password"/>
+            <widget class="QLineEdit" name="lineEdit_sftp_password">
+             <property name="echoMode">
+              <enum>QLineEdit::EchoMode::Password</enum>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -293,7 +304,11 @@
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="lineEdit_webdav_password"/>
+            <widget class="QLineEdit" name="lineEdit_webdav_password">
+             <property name="echoMode">
+              <enum>QLineEdit::EchoMode::Password</enum>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -539,12 +554,18 @@
        <item>
         <widget class="QPushButton" name="pushButton_union_add">
          <property name="text">
-          <string>Add remote</string>
+          <string>Add upstream</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QScrollArea" name="scrollArea">
+         <property name="frameShape">
+          <enum>QFrame::Shape::NoFrame</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Shadow::Plain</enum>
+         </property>
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
@@ -553,13 +574,34 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>596</width>
-            <height>325</height>
+            <width>203</width>
+            <height>338</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_21">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
            <item>
             <widget class="QToolBox" name="toolBox">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="frameShape">
+              <enum>QFrame::Shape::Box</enum>
+             </property>
              <property name="currentIndex">
               <number>0</number>
              </property>
@@ -568,28 +610,358 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>578</width>
-                <height>247</height>
+                <width>350</width>
+                <height>144</height>
                </rect>
               </property>
               <attribute name="label">
                <string>Page 1</string>
               </attribute>
-             </widget>
-             <widget class="QWidget" name="page_2">
-              <property name="geometry">
-               <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>98</width>
-                <height>28</height>
-               </rect>
-              </property>
-              <attribute name="label">
-               <string>Page 2</string>
-              </attribute>
+              <layout class="QVBoxLayout" name="verticalLayout_22">
+               <item>
+                <widget class="QPushButton" name="pushButton">
+                 <property name="text">
+                  <string>Delete</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_19">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="text">
+                  <string>Path</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLineEdit" name="lineEdit">
+                 <property name="toolTip">
+                  <string>Can be &quot;myremote:path/to/dir&quot;, &quot;myremote:bucket&quot;, &quot;myremote:&quot; or &quot;/local/path&quot;</string>
+                 </property>
+                 <property name="placeholderText">
+                  <string>Can be &quot;myremote:path/to/dir&quot;, &quot;myremote:bucket&quot;, &quot;myremote:&quot; or &quot;/local/path&quot;</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_20">
+                 <property name="text">
+                  <string>Attributes</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QComboBox" name="comboBox">
+                 <item>
+                  <property name="text">
+                   <string>None</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string extracomment=":ro">Files will only be read from here and never written</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string extracomment=":nc">New files or directories won't be created here</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string extracomment=":writeback">Files found in different remotes will be written back here</string>
+                  </property>
+                 </item>
+                </widget>
+               </item>
+              </layout>
              </widget>
             </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_21">
+             <property name="text">
+              <string>Action policy (writing existing file)</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="comboBox_2">
+             <property name="sizeAdjustPolicy">
+              <enum>QComboBox::SizeAdjustPolicy::AdjustToMinimumContentsLengthWithIcon</enum>
+             </property>
+             <item>
+              <property name="text">
+               <string extracomment="epall">epall (existing path, all): apply to all found</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="all">all (same as epall)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="epff">epff (existing path, first found): act on the first one found, by the time upstreams reply, where the relative path exists</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="eplfs">eplfs (existing path, least free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>eplus (existing path, least used space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>eplno (existing path, least number of objects)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>epmfs (existing path, most free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>eprand (existing path, random)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="ff">ff (first found): same as epff</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>lfs (least free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>lus (least used space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>lno (least number of objects)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>mfs (most free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>newest</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>rand (random)</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_22">
+             <property name="text">
+              <string>Create policy (Create non-existing file)</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="comboBox_3">
+             <property name="sizeAdjustPolicy">
+              <enum>QComboBox::SizeAdjustPolicy::AdjustToMinimumContentsLengthWithIcon</enum>
+             </property>
+             <item>
+              <property name="text">
+               <string extracomment="epmfs">epmfs (existing path, most free space): of all the upstreams on which the relative path exists choose the one with the most free space</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="all">all (act on all upstreams)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="epff">epff (existing path, first found): act on the first one found, by the time upstreams reply, where the relative path exists</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>epall (existing path, all): act on all upstreams where the relative path exists</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="eplfs">eplfs (existing path, least free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>eplus (existing path, least used space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>eplno (existing path, least number of objects)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>eprand (existing path, random)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="ff">ff (first found): act on the first one found by the time upstreams reply</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>lfs (least free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>lus (least used space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>lno (least number of objects)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>mfs (most free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>newest</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>rand (random)</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_23">
+             <property name="text">
+              <string>Search policy (Reading and listing file)</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="comboBox_4">
+             <property name="sizeAdjustPolicy">
+              <enum>QComboBox::SizeAdjustPolicy::AdjustToMinimumContentsLengthWithIcon</enum>
+             </property>
+             <item>
+              <property name="text">
+               <string extracomment="ff">ff (first found): same as epff</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="all">all (same as epall)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="epff">epff (existing path, first found): act on the first one found, by the time upstreams reply, where the relative path exists</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="epall">epall (existing path, all): given this order configured, act on the first one found where the relative path exists</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string extracomment="eplfs">eplfs (existing path, least free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>eplus (existing path, least used space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>eplno (existing path, least number of objects)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>epmfs (existing path, most free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>eprand (existing path, random)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>lfs (least free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>lus (least used space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>lno (least number of objects)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>mfs (most free space)</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>newest</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>rand (random)</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item>
+            <spacer name="verticalSpacer_9">
+             <property name="orientation">
+              <enum>Qt::Orientation::Vertical</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
            </item>
           </layout>
          </widget>
@@ -609,5 +981,22 @@
   </layout>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
+   <receiver>NewRemoteWindow</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>319</x>
+     <y>458</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>319</x>
+     <y>239</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
